# VINS-Mono

./: .gitignore  extrinsic_parameter.csv  street_08_ir.txt  vins_result_loop.txt  vins_result_no_loop.txt
CompressImage/: CMakeLists.txt  package.xml  subscribeCompressedImage.cpp  subscribeInfraredImage.cpp
CompressImage/launch/: testcompressed.launch  testinfrared.launch
M2DGR/: room_dark_01.txt  room_dark_01_ir.txt  room_dark_02.txt  room_dark_04.txt  street06_color.txt  street_06_ir.txt  street_08_color.txt  vins_street_06.txt
config/euroc/: euroc_config.yaml
config/ir_test/: ir_imu_config.yaml
config/m2dgr/: paperthermal_vins.yaml  thermal_freehands.yaml
config/mytest/: color_camera.yaml  paperthermal_vins.yaml
feature_tracker/: CMakeLists.txt
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  test_buildPyr.cpp  test_pyrLK.cpp  test_pyrLK1.cpp  test_pyrLKflow.cpp
pose_graph/src/: pose_graph.cpp  pose_graph_node.cpp
result/: handheld_init_underground_drive_slow.txt
vins_estimator/launch/: ir_test.launch  m2dgr_test.launch  mytest.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  marginalization_factor.cpp  marginalization_factor.h  projection_factor.cpp
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp
vins_estimator/src/utility/: utility.cpp  visualization.cpp
